# quill

./: .env.example  .gitignore  DESIGN_REPORT.md  README.md  TODO.md  project-plan.md  pyproject.toml
agents/: model.yaml
agents/default/: chapter_brief.prompt.md  config.yaml  draft.prompt.md  evaluate.prompt.md  humanize.prompt.md  outline.prompt.md  polish.prompt.md  review.prompt.md  revise.prompt.md  state.prompt.md  structure.prompt.md  summary.prompt.md  validate.prompt.md
agents/delme/: config.yaml  humanize.prompt.md  polish.prompt.md  revise.prompt.md
agents/fiction/: chapter_brief.prompt.md  config.yaml  draft.prompt.md  evaluate.prompt.md  humanize.prompt.md  outline.prompt.md  polish.prompt.md  review.prompt.md  revise.prompt.md  state.prompt.md  structure.prompt.md  summary.prompt.md  validate.prompt.md
agents/non-fiction/: chapter_brief.prompt.md  config.yaml  draft.prompt.md  evaluate.prompt.md  humanize.prompt.md  outline.prompt.md  (+7 more)
docs/: ADR-003-addendum.md  ADR-003-module-structure.md  ARCHITECTURE.md  CHAPTER_DESIGN.md  PROMPTS.md  RECORDING-PLAN.md  concurrency.md  future.md
scripts/: run-ferret.sh
templates/: brief.md  outline.md  review.md
tests/: conftest.py  test_agent.py  test_app.py  test_async.py  test_audio.py  test_auto.py  test_comic.py  test_concurrency.py  test_llm_integration.py  test_metrics.py  test_narrative_state.py  test_navigation.py  test_orchestrator.py  test_piece.py  test_piece_state.py  test_pipeline.py  test_research_service.py  test_runner.py  test_search_client.py  test_structure.py
workflows/: default.yaml
(+65 files in other folders)
