[project]
name = "quill"
version = "0.1.0"
description = "Writing workflow engine — multi-stage pipeline for long-form content"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
gdocs = ["google-api-python-client", "google-auth-oauthlib", "google-auth-httplib2"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.behave]
default_tags = ["not @slow"]
